// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`LoginPane hides password link when lock does not have the screen \`forgotPassword\` 1`] = `
<div>
  <div
    data-__type="username_pane"
    data-i18n={Object {}}
    data-lock={Object {}}
    data-placeholder="usernameInputPlaceholder"
    data-usernameStyle={undefined}
    data-validateFormat={false}
  />
  <div
    data-__type="password_pane"
    data-i18n={Object {}}
    data-lock={Object {}}
    data-placeholder="passwordInputPlaceholder"
  />
</div>
`;

exports[`LoginPane hides password link when showForgotPasswordLink === false 1`] = `
<div>
  <div
    data-__type="username_pane"
    data-i18n={Object {}}
    data-lock={Object {}}
    data-placeholder="usernameInputPlaceholder"
    data-usernameStyle={undefined}
    data-validateFormat={false}
  />
  <div
    data-__type="password_pane"
    data-i18n={Object {}}
    data-lock={Object {}}
    data-placeholder="passwordInputPlaceholder"
  />
</div>
`;

exports[`LoginPane hides password pane when showPassword===false 1`] = `
<div>
  <div
    data-__type="username_pane"
    data-i18n={Object {}}
    data-lock={Object {}}
    data-placeholder="usernameInputPlaceholder"
    data-usernameStyle={undefined}
    data-validateFormat={false}
  />
  <p
    className="auth0-lock-alternative"
  >
    <a
      className="auth0-lock-alternative-link"
      href="forgotPasswordLink"
      onClick={undefined}
    >
      forgotPasswordAction
    </a>
  </p>
</div>
`;

exports[`LoginPane renders correctly 1`] = `
<div>
  <div
    data-__type="username_pane"
    data-i18n={Object {}}
    data-lock={Object {}}
    data-placeholder="usernameInputPlaceholder"
    data-usernameStyle={undefined}
    data-validateFormat={false}
  />
  <div
    data-__type="password_pane"
    data-i18n={Object {}}
    data-lock={Object {}}
    data-placeholder="passwordInputPlaceholder"
  />
  <p
    className="auth0-lock-alternative"
  >
    <a
      className="auth0-lock-alternative-link"
      href="forgotPasswordLink"
      onClick={undefined}
    >
      forgotPasswordAction
    </a>
  </p>
</div>
`;

exports[`LoginPane shows email pane when user usernameStyle === email 1`] = `
<div>
  <div
    data-__type="email_pane"
    data-forceInvalidVisibility={false}
    data-i18n={Object {}}
    data-lock={Object {}}
    data-placeholder="emailInputPlaceholder"
  />
  <div
    data-__type="password_pane"
    data-i18n={Object {}}
    data-lock={Object {}}
    data-placeholder="passwordInputPlaceholder"
  />
  <p
    className="auth0-lock-alternative"
  >
    <a
      className="auth0-lock-alternative-link"
      href="forgotPasswordLink"
      onClick={undefined}
    >
      forgotPasswordAction
    </a>
  </p>
</div>
`;

exports[`LoginPane shows header when instructions is not empty 1`] = `
<div>
  <p>
    instructions
  </p>
  <div
    data-__type="username_pane"
    data-i18n={Object {}}
    data-lock={Object {}}
    data-placeholder="usernameInputPlaceholder"
    data-usernameStyle={undefined}
    data-validateFormat={false}
  />
  <div
    data-__type="password_pane"
    data-i18n={Object {}}
    data-lock={Object {}}
    data-placeholder="passwordInputPlaceholder"
  />
  <p
    className="auth0-lock-alternative"
  >
    <a
      className="auth0-lock-alternative-link"
      href="forgotPasswordLink"
      onClick={undefined}
    >
      forgotPasswordAction
    </a>
  </p>
</div>
`;

exports[`LoginPane shows username pane when user usernameStyle !== email 1`] = `
<div>
  <div
    data-__type="username_pane"
    data-i18n={Object {}}
    data-lock={Object {}}
    data-placeholder="usernameInputPlaceholder"
    data-usernameStyle="any"
    data-validateFormat={false}
  />
  <div
    data-__type="password_pane"
    data-i18n={Object {}}
    data-lock={Object {}}
    data-placeholder="passwordInputPlaceholder"
  />
  <p
    className="auth0-lock-alternative"
  >
    <a
      className="auth0-lock-alternative-link"
      href="forgotPasswordLink"
      onClick={undefined}
    >
      forgotPasswordAction
    </a>
  </p>
</div>
`;

exports[`LoginPane shows username pane when user usernameStyle !== email 2`] = `
<div>
  <div
    data-__type="username_pane"
    data-i18n={Object {}}
    data-lock={Object {}}
    data-placeholder="usernameInputPlaceholder"
    data-usernameStyle="username"
    data-validateFormat={false}
  />
  <div
    data-__type="password_pane"
    data-i18n={Object {}}
    data-lock={Object {}}
    data-placeholder="passwordInputPlaceholder"
  />
  <p
    className="auth0-lock-alternative"
  >
    <a
      className="auth0-lock-alternative-link"
      href="forgotPasswordLink"
      onClick={undefined}
    >
      forgotPasswordAction
    </a>
  </p>
</div>
`;
